Inverted board being implemented